2006-03-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scripts/abc2ly.py (option_parser): update to 2.7.40

2006-03-20  Graham Percival  <gpermus@gmail.com>

	* THANKS: move small doc contributors to SUGGESTIONS.

	* Documentation/user/ basic-notation, advanced-notation,
	global: small changes from mailist.

2006-03-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/advanced-notation.itely (Text marks): update
	for new rehearsalMarkAlignSymbol convention.

	* VERSION (PATCH_LEVEL): bump version.

	* input/test/instrument-name-align.ly: new file.

	* scm/define-markup-commands.scm (hcenter-in): add hcenter-in.

	* input/test/instrument-name-align.ly: new file. Document how to
	align instrument names.

	* lily/mark-engraver.cc: remove properties.

	* scm/define-context-properties.scm
	(all-user-translation-properties): remove align symbol properties
	for barnumber/reh. mark.

	* lily/break-align-interface.cc (self_align_callback): new
	interface, new function. Look at complete alignment. This handles
	tunable break alignments in case break-align-symbols are missing.

	* lily/bar-number-engraver.cc (acknowledge_break_alignment): new function

	* lily/mark-engraver.cc (acknowledge_break_alignment): new function.

	* python/convertrules.py (conv): mark/bar number alignment rule.

	* lily/break-align-interface.cc (calc_positioning_done): also
	store offset from last visible break-alignment to its
	neighbor. This makes alignment on non-visible objects more reliable.

	* po/lilypond.pot (Module): ran po-replace.

	* input/regression/tie-single-manual.ly (Module): new file.

	* lily/tie-formatting-problem.cc (find_optimal_tie_configuration):
	look at has_manual_position_.
	(from_ties): set has_manual_position_ if tie has staff-position set.

	* lily/tuplet-bracket.cc (calc_positions): idem.

	* lily/tuplet-number.cc (print): don't print tupletnumber if it
	doesn't span time.

2006-03-19  Nicolas Sceaux  <nicolas.sceaux@free.fr>
