@@ -1,5 +1,7 @@
 2006-03-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* input/regression/lyric-hyphen-retain.ly: elaborate explanation.
+
 	* scripts/abc2ly.py (option_parser): update to 2.7.40
 
 2006-03-20  Graham Percival  <gpermus@gmail.com>
